aws/cloudformation/CFN_VPC_Basic.cfn.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
    In 2 AZs, setup the following subnets: public subnet for ELB, private
    subnet for app intances, private subnet for DB instances.  with NAT-GW and
    Bastion host in one public subnet (not HA).  Routing tables for each
    subnet.  Security group for bastion.
Conditions:
    NVirginiaRegionCondition:
        Fn::Equals:
            - !Ref AWS::Region
            - us-east-1
Resources:
    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: 10.0.0.0/16
            EnableDnsSupport: true
            EnableDnsHostnames: true
            InstanceTenancy: default
            Tags: [{Key: "Name", Value: !Ref "AWS::StackName"}, {Key: "Project", Value: !Ref "AWS::StackName"}]
    DHCPOptions:
        Type: AWS::EC2::DHCPOptions
        Properties:
            DomainName:
                Fn::If:
                    - NVirginiaRegionCondition
                    - "ec2.internal"
                    - !Sub "${AWS::StackName}.compute.internal"
            DomainNameServers: ["AmazonProvidedDNS"]
            Tags: [{Key: "Name", Value: !Ref "AWS::StackName"}, {Key: "Project", Value: !Ref "AWS::StackName"}]
    VPCDHCPOptionsAssociation:
        Type: AWS::EC2::VPCDHCPOptionsAssociation
        Properties:
            VpcId: !Ref VPC
            DhcpOptionsId: !Ref DHCPOptions
    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags: [{Key: "Name", Value: !Ref "AWS::StackName"}, {Key: "Project", Value: !Ref "AWS::StackName"}]
    VPCInternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            VpcId: !Ref VPC
            InternetGatewayId: !Ref InternetGateway
    PublicSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            CidrBlock: 10.0.0.0/24
            AvailabilityZone:
                Fn::Select:
                    - 0
                    - Fn::GetAZs: !Ref "AWS::Region"
            Tags:
                - Key: "Name"
                  Value:
                      Fn::Join:
                          - "-"
                          - - !Ref "AWS::StackName"
                            - "pub"
                            - {"Fn::Select": [0, {"Fn::GetAZs": !Ref "AWS::Region"}]}
                - Key: "Project"
                  Value: !Ref "AWS::StackName"
    PublicSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            CidrBlock: 10.0.128.0/24
            AvailabilityZone:
                Fn::Select:
                    - 1
                    - Fn::GetAZs: !Ref "AWS::Region"
            Tags:
                - Key: "Name"
                  Value:
                      Fn::Join:
                          - "-"
                          - - !Ref "AWS::StackName"
                            - "pub"
                            - {"Fn::Select": [1, {"Fn::GetAZs": !Ref "AWS::Region"}]}
                - Key: "Project"
                  Value: !Ref "AWS::StackName"
    AppPrivateSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            CidrBlock: 10.0.16.0/24
            AvailabilityZone:
                Fn::Select:
                    - 0
                    - Fn::GetAZs: !Ref "AWS::Region"
            Tags:
                - Key: "Name"
                  Value:
                      Fn::Join:
                          - "-"
                          - - !Ref "AWS::StackName"
                            - "app"
                            - {"Fn::Select": [0, {"Fn::GetAZs": !Ref "AWS::Region"}]}
                 
                - Key: "Project"
                  Value: !Ref "AWS::StackName"
    AppPrivateSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            CidrBlock: 10.0.144.0/24
            AvailabilityZone:
                Fn::Select:
                    - 1
                    - Fn::GetAZs: !Ref "AWS::Region"
            Tags:
                - Key: "Name"
                  Value:
                      Fn::Join:
                          - "-"
                          - - !Ref "AWS::StackName"
                            - "app"
                            - {"Fn::Select": [1, {"Fn::GetAZs": !Ref "AWS::Region"}]}

                - Key: "Project"
                  Value: !Ref "AWS::StackName"
    DbPrivateSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            CidrBlock: 10.0.32.0/24
            AvailabilityZone:
                Fn::Select:
                    - 0
                    - Fn::GetAZs: !Ref "AWS::Region"
            Tags:
                - Key: "Name"
                  Value:
                      Fn::Join:
                          - "-"
                          - - !Ref "AWS::StackName"
                            - "db"
                            - {"Fn::Select": [0, {"Fn::GetAZs": !Ref "AWS::Region"}]}

                - Key: "Project"
                  Value: !Ref "AWS::StackName"
    DbPrivateSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            CidrBlock: 10.0.160.0/24
            AvailabilityZone:
                Fn::Select:
                    - 1
                    - Fn::GetAZs: !Ref "AWS::Region"
            Tags:
                - Key: "Name"
                  Value:
                      Fn::Join:
                          - "-"
                          - - !Ref "AWS::StackName"
                            - "db"
                            - {"Fn::Select": [1, {"Fn::GetAZs": !Ref "AWS::Region"}]}

                - Key: "Project"
                  Value: !Ref "AWS::StackName"
    NATGatewayEIP:
        Type: AWS::EC2::EIP
        DependsOn: VPCInternetGatewayAttachment
        Properties:
            Domain: "vpc"
    NATGateway:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NATGatewayEIP.AllocationId
            SubnetId: !Ref PublicSubnet1
            Tags: [{Key: "Name", Value: !Sub "${AWS::StackName}"}, {Key: "Project", Value: !Ref "AWS::StackName"}]
    PublicSubnetRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags: [{Key: "Name", Value: !Sub "${AWS::StackName}-pub"}, {Key: "Project", Value: !Ref "AWS::StackName"}]
    PublicSubnetRoute:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PublicSubnetRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway
    PublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicSubnetRouteTable
            SubnetId: !Ref PublicSubnet1
    PublicSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicSubnetRouteTable
            SubnetId: !Ref PublicSubnet2
    PrivateSubnetRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags: [{Key: "Name", Value: !Sub "${AWS::StackName}-priv"}, {Key: "Project", Value: !Ref "AWS::StackName"}]
    PrivateSubnetRoute:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateSubnetRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NATGateway
    AppPrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId: !Ref AppPrivateSubnet1
            RouteTableId: !Ref PrivateSubnetRouteTable
    AppPrivateSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId: !Ref AppPrivateSubnet2
            RouteTableId: !Ref PrivateSubnetRouteTable
    DbPrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId: !Ref DbPrivateSubnet1
            RouteTableId: !Ref PrivateSubnetRouteTable
    AppPrivateSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId: !Ref DbPrivateSubnet2
            RouteTableId: !Ref PrivateSubnetRouteTable

Outputs:
    VPCID:
        Description: "VPC ID"
        Value: !Ref VPC
        Export:
            Name:
                Fn::Sub: "${AWS::StackName}:VPCID"
    PublicSubnet1:
        Description: "Public Subnet 1"
        Value: !Ref PublicSubnet1
        Export:
            Name:
                Fn::Sub: "${AWS::StackName}:PublicSubnet1"
    PublicSubnet2:
        Description: "Public Subnet 2"
        Value: !Ref PublicSubnet2
        Export:
            Name:
                Fn::Sub: "${AWS::StackName}:PublicSubnet2"
    AppPrivateSubnet1:
        Description: "App Private Subnet 1"
        Value: !Ref AppPrivateSubnet1
        Export:
            Name:
                Fn::Sub: "${AWS::StackName}:AppPrivateSubnet1"
    AppPrivateSubnet2:
        Description: "App Private Subnet 2"
        Value: !Ref AppPrivateSubnet2
        Export:
            Name:
                Fn::Sub: "${AWS::StackName}:AppPrivateSubnet2"
    DbPrivateSubnet1:
        Description: "Db PrivateSubnet 1"
        Value: !Ref DbPrivateSubnet1
        Export:
            Name:
                Fn::Sub: "${AWS::StackName}:DbPrivateSubnet1"
    DbPrivateSubnet2:
        Description: "Db Private Subnet 2"
        Value: !Ref DbPrivateSubnet2
        Export:
            Name:
                Fn::Sub: "${AWS::StackName}:DbPrivateSubnet2"
    NATGatewayEIP:
        Description: "NATGateway EIP"
        Value: !Ref NATGatewayEIP
        Export:
            Name:
                Fn::Sub: "${AWS::StackName}:NATGatewayEIP"
    PublicRouteTable:
        Description: "Public Route Table"
        Value: !Ref PublicRouteTable
        Export:
            Name:
                Fn::Sub: "${AWS::StackName}:PublicRouteTable"
    PrivateRouteTable:
        Description: "Private Route Table"
        Value: !Ref PrivateRouteTable
        Export:
            Name:
                Fn::Sub: "${AWS::StackName}:PrivateRouteTable"
